# Deterministic-Classification-of-Accounting-Functions-in-Code-Contributions

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  constants.py  data_cli.py  dempe_cli.py  main_cli.py  pyproject.toml  repos.json  requirements.txt  run_data_pipeline.sh  training_cli.py
commands/: apply_mlsmote.py  cleaned_commits.py  extract_raw_commits.py  fetch_commits.py  label_commits.py  pipeline.py  plot_classification_report.py  predict_dempe.py  predict_svm.py  semantic_keywords.py  split_train_test.py  train_classification_chain.py  train_gbm_ovr.py  train_nn.py  train_one_vs_rest_lg.py  train_one_vs_rest_random_forest.py  train_svm.py  train_test_logreg_model.py  visualize_cleaned_commits.py  visualize_labeled_commits.py  visualize_mlsmote_distribution.py
data/csv_data/: cleaned_commits.csv  labeled_commits.csv  non_conventional_commits.csv  raw_commit_messages.csv  semantic_relabelled_commits.csv  semantic_unmatched_commits.csv  test_set.csv  train_set.csv
data/models/: classifier_chain_model.pkl  gbm_ovr_model.pkl  logreg_ovr_model.pkl  nn_multilabel_model.h5  tfidf_logreg_model.pkl
data/raw_data/: atoms.json  electron.json  istanbuljs.json  scroll-utility.json  standard-version.json  uportal-app-framework.json  uportal-home.json  yargs.json
data/reports/: logreg_classification_report.txt
models/svm/: classification_report.csv  svm_bundle.joblib
test_data/csv_data/: raw_commit_messages.csv
test_data/raw_data/: codc-cli.json  (+1 more)
tests/: test_cli.py  test_extract_raw_commit_messages.py  test_fetch_commits.py
utils/: helper.py
(+15 files in other folders)
