[project]
name = "Classification-of-DEMPE-functions"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Arni Islam", email = "arniislam03@gmail.com"},
]
dependencies = ["click>=8.1.7", "requests>=2.32.3", "tqdm>=4.67.1", "pytest>=8.3.3", "rich>=13.9.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
c = "python cli.py {args}"
