[project]
name = "Classification-of-DEMPE-functions"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Arni Islam", email = "arniislam03@gmail.com"},
]
dependencies = ["click>=8.1.7", "requests>=2.32.3", "tqdm>=4.67.1", "pytest>=8.3.3", "rich>=13.9.4", "pandas>=2.2.3", "openpyxl>=3.1.5", "matplotlib>=3.10.0", "seaborn>=0.13.2", "wordcloud>=1.9.4", "nltk>=3.9.1", "scikit-learn>=1.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
c = "python cli.py {args}"
